# fluid_simulator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  FluidSimulator.sln  README.md  render_engine.uml  render_engine.~ml
Application/: Application.vcxproj  Application.vcxproj.filters  fluid_simulator.vcxproj.filters  imgui.ini  main.cpp
Application/gfx/: gfxInterface.hpp
Application/gfx/gfx2D/: simulationGfx2D.hpp
Application/gfx/gfx3D/: diffRenderProxy.cpp  (+9 more)
Application/shaders/: 3D_object.vert  3D_objectArray.fs  3D_object_not_textured.frag  3D_objects.vs  3D_objects_not_textured.fs  3D_objects_textured.fs  basic.fs  basic.vs  basic2D.vert  basic2DArray.vert  basic2DArraySingleColor.vs  bilateral.fs  computeTest.comp  eulerGrid.fs  eulerGrid.vs  gaussian.frag  gaussian.fs  gaussian_thickness.fs  normal_depth.fs  normals.fs  obstacle.fs  obstacle.vs  particle_sprites.fs  particle_sprites.vs  particle_sprites_shaded.frag  particle_sprites_thickness.fs  particle_sprites_thickness.vert  particle_sprites_thickness_noise.fs  particle_sprites_thickness_noise.vs  quad.frag  quad.fs  quad.vs  quad_int.frag  shadedDepth.frag  shadedDepth.fs
Application/ui/: param.hpp  simParamsAdvanced.cpp  simParamsAdvanced.h  simulationGui.cpp  simulationGui.h
RenderEngine/: RenderEngine.vcxproj  RenderEngine.vcxproj.filters
RenderEngine/compute/: computeTexture.h  storageBuffer.cpp  storageBuffer.h
RenderEngine/engine/: callback.hpp  engineGeometry.h  framebuffer.cpp  framebuffer.h  renderEngine.cpp  renderEngine.h  shaderProgram.cpp  shaderProgram.h  texture.cpp  texture.h
RenderEngine/engineUtils/: camera2D.hpp  camera3D.hpp  lights.hpp  object.h  object3D.hpp
RenderEngine/geometries/: basicGeometries.cpp  basicGeometries.h  circle.cpp  circle.h  geometry.cpp  geometry.h  quad.cpp  quad.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h
RenderEngine/glad/: glad.c
Simulator/: Simulator.vcxproj  Simulator.vcxproj.filters
Simulator/manager/: simulationManager.cpp  simulationManager.h
Simulator/simulator/: simulator.cpp  simulator.h
docs/: render_engine.~ml
src/: CMakeLists.txt
src/Application/: CMakeLists.txt  imgui.ini
src/Application/gfx/: gfxInterface.hpp
src/Application/gfx/gfx2D/: simulationGfx2D.hpp
src/Application/gfx/gfx3D/: diffRenderProxy.cpp  diffRenderProxy.h  fluidSurfaceGfx.cpp  fluidSurfaceGfx.h  renderer3DInterface.h  simulationGfx3D.cpp  simulationGfx3D.h  simulationGfx3DController.cpp  simulationGfx3DController.h  simulationGfx3DRenderer.cpp  simulationGfx3DRenderer.h  transparentBox.hpp
src/Application/gfx/gfx3D/renderer/: diffRenderProxy.cpp  diffRenderProxy.h  fluidSurfaceGfx.cpp  fluidSurfaceGfx.h  paramInterface.h  simulationGfx3DRenderer.cpp  simulationGfx3DRenderer.h  transparentBox.hpp
src/Application/ui/: param.hpp  simParamsAdvanced.cpp  simulationGui.cpp
src/RenderEngine/: CMakeLists.txt
src/RenderEngine/compute/: computeProgram.cpp  computeProgram.h  computeTexture.cpp  storageBuffer.h
src/RenderEngine/engine/: framebuffer.cpp  framebuffer.h  renderEngine.h  shaderProgram.cpp  shaderProgram.h  texture.cpp  texture.h  uniforms.hpp
src/RenderEngine/engineUtils/: camera2D.hpp  camera3D.hpp  lights.hpp
src/RenderEngine/geometries/: basicGeometries.cpp  basicGeometries.h  geometry.cpp  geometry.h
src/RenderEngine/glad/: CMakeLists.txt  glad.h
src/Simulator/: CMakeLists.txt
src/Simulator/manager/: simulationManager.cpp  simulationManager.h
src/Simulator/simulator/: simulator.cpp  simulator.h
src/Simulator/simulator/macGrid/: basicMacGrid.cpp  basicMacGrid.h  bridsonSolverGrid.cpp  bridsonSolverGrid.h  macGrid.cpp  macGrid.h  macGridCell.h
src/Simulator/simulator/particles/: hashedParticles.cpp  particle.h
src/Simulator/simulator/util/: glmExtraOps.h  interpolation.h  paralellDefine.h
src/Visualization/: CMakeLists.txt
src/Visualization/gfx2D/: simulationGfx2D.hpp
src/Visualization/gfx3D/: renderer3DInterface.h  simulationGfx3DController.cpp  simulationGfx3DController.h
src/Visualization/gfx3D/adam/: adam.cpp  adam.h
src/Visualization/gfx3D/diffRenderer/: diffRenderProxy.cpp  diffRenderProxy.h  gradientCalculatorInterface.h  gradientCalculatorPos.cpp  gradientCalculatorPos.h  gradientCalculatorSpeed.cpp  gradientCalculatorSpeed.h
src/Visualization/gfx3D/gradientSmoothing/: gradientSmoothing.cpp  gradientSmoothing.h
src/Visualization/gfx3D/optimizer/: adam.cpp  adam.h  densityControl.cpp  densityControl.h
src/Visualization/gfx3D/renderer/: diffRenderProxy.cpp  fluidSurfaceGfx.cpp  simulationGfx3DRenderer.cpp
src/Visualization/gfx3D/renderer/headers/: diffRenderProxy.h  fluidSurfaceGfx.h  paramInterface.h  simulationGfx3DRenderer.h  transparentBox.hpp
src/Visualization/gfxInterface/: gfxInterface.hpp
src/Visualization/shaders/3D/: 3D_objectArray.frag  3D_objectArray.vert  particleArray.vert
src/Visualization/shaders/3D/adam/: adamOptimizer.comp  gradientMult.comp
src/Visualization/shaders/3D/densityControl/: avgMovement.comp  initAvgMovementArray.comp  updatePositions.comp
src/Visualization/shaders/3D/diffRender/: adamGradientToParticleGradient.comp  floatPosClamper.comp  floatToParticleData.comp  gradientSum.comp  particleDataToFloat.comp  particleGradient.comp  particleGradientToFloat.comp  perturbation.comp  perturbation_speed.comp  stochGradient.comp  stochGradient_color_speed.comp  stochGradient_depth.comp  stochGradient_depth_speed.comp
src/Visualization/shaders/3D/gradientSmoothing/: gradientCopy.comp  smoothGradient.comp
src/Visualization/shaders/3D/surface/: bilateral_x.frag  bilateral_y.frag  gaussian_x.frag  gaussian_y.frag  particle_sprites.vert  particle_sprites_depth.frag
src/Visualization/shaders/3D/util/: arrow.frag  arrow.vert  copyParams_non_zero.comp
src/imgui/: CMakeLists.txt  param.hpp
src/shaders/: 3D_objectArray.vs  3D_objectArray_id.frag  3D_object_textured.frag  3D_object_textured.fs  basic2D.fs  bilateral.fs  computeTest.comp  copyParams.comp  gaussian_x.frag  gaussian_y.frag  particle_sprites.vert  particle_sprites_depth.frag  particle_sprites_depth.fs
(+11 files in other folders)
